// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when get is in progress 1`] = `
<AltBackgroundSection
  className="components-entity-card-collection-m__background"
>
  <Loader
    size="massive"
    type="default"
  />
</AltBackgroundSection>
`;

exports[`should render correctly when there are entities 1`] = `
<AltBackgroundSection
  className="components-entity-card-collection-m__background"
>
  <div
    className="components-entity-card-collection-m__cards-container"
  >
    <EntityCard
      cardContentFactory={[Function]}
      dateStr="2017/01/18"
      entity={
        SummaryVenue {
          "entity": Object {
            "id": "some-venue-id",
          },
          "postcodeDistrict": undefined,
        }
      }
      key="some-venue-id"
    />
  </div>
</AltBackgroundSection>
`;

exports[`should render correctly when there are no entities 1`] = `
<AltBackgroundSection
  className="components-entity-card-collection-m__background"
>
  <NoContent />
</AltBackgroundSection>
`;
